--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "job-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://brunolv6.github.io/project-job-search",
   "dependencies": {
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
